fix z-index

--- a/my-app/src/css/style.css
+++ b/my-app/src/css/style.css
@@ -39,7 +39,12 @@ aside {
 }
 
 .dropdown-menu {
-  z-index: 1000000000000000;
+  z-index: 100;
+}
+
+.aside-section {
+  z-index: 99;
+  position: relative;
 }
 
 #Reg {
